[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entities/Ship/Ship.gd" type="Script" id=1]

[node name="Ship" type="RigidBody2D"]
can_sleep = false
script = ExtResource( 1 )

[node name="InitialModules" type="Node2D" parent="."]

[node name="ActiveModules" type="Node2D" parent="."]

[node name="ActivePolygons" type="Node2D" parent="."]
